fix(library-view): fix song layout alignment

--- a/src/renderer/src/features/library-view/components/song/Song.module.scss
+++ b/src/renderer/src/features/library-view/components/song/Song.module.scss
@@ -1,7 +1,8 @@
 .song {
    display: grid;
+   grid-template-columns: max-content auto auto;
    grid-auto-flow: column;
-   grid-column-gap: .5em;
+   grid-column-gap: .75em;
    align-items: center;
 
    padding: 0.5em var(--appSideSpace);
